[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dev-dependencies]
vexide = { version = "0.8.0", features = ["full", "default-sdk"] }
ozton = { path = "packages/ozton" }

[workspace]
members = ["packages/*"]
resolver = "2"

[profile.release]
strip = true
# opt-level = "z"
opt-level = 3
lto = "fat"

[lints.clippy]
missing_const_for_fn = "warn"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
missing_panics_doc = "allow"
cast_possible_wrap = "allow"
match_bool = "allow"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_vendor, values("vex"))',
] }
